edition = "2023";

package ordering;
option go_package = "github.com/relab/gorums/ordering";

option features.field_presence = IMPLICIT;

import "google/rpc/status.proto";

service Gorums {
  // NodeStream is a stream that connects a client to a Node.
  // The messages that are sent on the stream contain both Metadata
  // and an application-specific message.
  rpc NodeStream(stream Metadata) returns (stream Metadata);
}

// Metadata is sent together with application-specific message types,
// and contains information necessary for Gorums to handle the messages.
message Metadata {
  uint64 MessageID = 1;
  string Method = 2;
  google.rpc.Status Status = 3;
  // per message client-generated metadata
  repeated MetadataEntry Entry = 4;
}

message MetadataEntry {
  string Key = 1;
  string Value = 2;
}
